codepkg/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invocies</relationshipLabel>
        <relationshipName>Invocies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Surcharge_Total__c</fullName>
        <label>Admin Surcharge Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engine_Value_of_F42__c</fullName>
        <label>Engine Value of F42</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Hours__c</fullName>
        <label>Equipment Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_Total_Value__c</fullName>
        <label>Equipment Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Rule</label>
        <referenceTo>Funding_Rule__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Import_Invoice_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Import Invoice Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Invocies</relationshipLabel>
        <relationshipName>Invocies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Json</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Number_For_Json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Number For Json</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personnel_Hours__c</fullName>
        <label>Personnel Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personnel_Total_Value__c</fullName>
        <label>Personnel Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Printed_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Printed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Printed Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reject Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RejectedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rejected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Generation In-progress</fullName>
                </value>
                <value>
                    <fullName>Invoice Generated</fullName>
                </value>
                <value>
                    <fullName>Pending For Local Agency Approval</fullName>
                </value>
                <value>
                    <fullName>Local Agency Approved</fullName>
                </value>
                <value>
                    <fullName>Local Agency Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending For Paying Entity Approval</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>Paying Entity Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Vehicle_Days__c</fullName>
        <label>Support Vehicle Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Vehicle_Total__c</fullName>
        <label>Support Vehicle Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Amount__c</fullName>
        <label>Total Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Total__c</fullName>
        <label>Travel Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>Agency_Approved</fullName>
        <columns>NAME</columns>
        <columns>Incident__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Agency Approved</value>
        </filters>
        <label>Agency Approved</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Incident__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Amendment_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Incident__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Amendment</value>
        </filters>
        <label>All Amendment Invoices</label>
    </listViews>
    <listViews>
        <fullName>Invoice_Generated</fullName>
        <columns>NAME</columns>
        <columns>Incident__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Invoice Generated</value>
        </filters>
        <label>Invoice Generated</label>
    </listViews>
    <listViews>
        <fullName>Paid</fullName>
        <columns>NAME</columns>
        <columns>Incident__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Paid,Partially Paid</value>
        </filters>
        <label>Paid</label>
    </listViews>
    <listViews>
        <fullName>Pending_For_Agency_Approval</fullName>
        <columns>NAME</columns>
        <columns>Incident__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending For Agency Approval</value>
        </filters>
        <label>Pending For Agency Approval</label>
    </listViews>
    <listViews>
        <fullName>Pending_For_Paying_Entity_Approval</fullName>
        <columns>NAME</columns>
        <columns>Incident__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending For Paying Entity Approval</value>
        </filters>
        <label>Pending For Paying Entity Approval</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>